[package]
name = "iceity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.4.2", features = ["tokio", "debug"]}
iced_native = { version = "0.5.1" }
clap = {version = "3.2.5", features = ["derive", "unicode"]}
log = "0.4"
env_logger = "0.8.4"

[dependencies.tokio]
version = "1.19.2"
features = ["full"]
